--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <input type="checkbox" id="remember">
           <p>Remember me</p>
         </label>
-        <a href="#">Forgot password?</a>
+<!--         <a href="#">Forgot password?</a> -->
       </div>
       <button type="submit">Log In</button>
       <div class="register">
